--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@
   <!-- ═══ API CONFIG (change this to your Railway URL) ═══ -->
   <script>
     // ⚠️ CHANGE THIS to your Railway backend URL after deployment
-    const API_URL = "https://your-backend.up.railway.app";
+   const API_URL = "https://haneen-cv-backend-production.up.railway.app";
+
   </script>
   <script src="js/app.js"></script>
 </body>
